--- a/headwear.html
+++ b/headwear.html
@@ -43,7 +43,7 @@
 								<li class="li-margin"><a href="#tees" class="link subheader-link">Graphic Tees</a></li>
 								<li><a href="#flannels" class="link subheader-link">Hoodies & Flannels</a></li>
 								<li><a href="#preformance" class="link subheader-link">Preformance Wear</a></li>
-								<li class="li-margin1"><a href="#women" class="link header-link">Women</a></li>
+								<li class="li-margin1"><a href="women.html" class="link header-link">Women</a></li>
 								<li></li>
 								<li><a href="#tanks" class="link subheader-link">Tees & Tanks</a></li>
 								<li><a href="#hoodies" class="link subheader-link">Hoodies</a></li>
@@ -465,7 +465,6 @@
 			</div>
 				<img src="assets/images/info.png" alt="Info" id="main-preview">
 				<div class="preview-body">
-				<div class="hat-details">
 					<div class="details-title">Hat Name
 					</div>
 					<div class="details-fit">Fit
@@ -477,7 +476,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
 				<button class="right-arrow"><i class="material-icons preview-arrow">arrow_forward</i></button>
 			
 			<div class="preview-footer">
